--- a/index.html
+++ b/index.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Cat Game</title>
-  <link rel="stylesheet" type="text/css" href="style.css" />
+<html lang="en"><head>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.11.5/lib/p5.js"></script><script src="https://cdn.jsdelivr.net/npm/p5.js-compatibility@0.1.2/src/preload.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.3/addons/p5.sound.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="utf-8">
 
-  <!-- ✅ 載入 p5.js 核心 -->
-  <script src="p5.js"></script>
-  <script src="p5.sound.min.js"></script>
+  </head>
+  <body>
+    <main>
+    </main>
+    <script src="Cat.js"></script>
+    <script src="sketch.js"></script>
+  
 
-  <!-- ✅ 載入你自己的腳本 -->
-  <script src="preload.js"></script>
-  <script src="Cat.js"></script>
-  <script src="sketch.js"></script>
-</head>
-<body>
-</body>
-</html>
+</body></html>
