--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <main>
     </main>
     <script src="Cat.js"></script>
+    <script src="menu.js"></script>
     <script src="sketch.js"></script>
   
 
