--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     </main>
     <script src="Cat.js"></script>
     <script src="menu.js"></script>
+    <script src="touchControl.js"></script>
     <script src="sketch.js"></script>
   
 
