--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="Cat.js"></script>
     <script src="menu.js"></script>
     <script src="touchControl.js"></script>
+    <script src="background.js"></script>
     <script src="sketch.js"></script>
   
 
