--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script src="menu.js"></script>
     <script src="touchControl.js"></script>
     <script src="background.js"></script>
+    <script src="music.js"></script>
     <script src="Game.js"></script>
     <script src="sketch.js"></script>
   
