--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main>
     </main>
     <script src="Cat.js"></script>
-    <script src="menu.js"></script>
+    <script src="langManager.js"></script>
     <script src="NPC.js"></script>
     <script src="touchControl.js"></script>
     <script src="background.js"></script>
