--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </main>
     <script src="Cat.js"></script>
     <script src="langManager.js"></script>
+    <script src="TransitionManager.js"></script>
     <script src="NPC.js"></script>
     <script src="touchControl.js"></script>
     <script src="background.js"></script>
