--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="Cat.js"></script>
     <script src="langManager.js"></script>
     <script src="TransitionManager.js"></script>
+    <script src="DreamManager.js"></script>
     <script src="NPC.js"></script>
     <script src="touchControl.js"></script>
     <script src="background.js"></script>
