--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </main>
     <script src="Cat.js"></script>
     <script src="langManager.js"></script>
+    <script src="TrainShaker.js"></script>
     <script src="TransitionManager.js"></script>
     <script src="DreamManager.js"></script>
     <script src="NPC.js"></script>
@@ -25,6 +26,7 @@
     <script src="background.js"></script>
     <script src="music.js"></script>
     <script src="dialogue.js"></script>
+    <script src="UI.js"></script>
     <script src="Game.js"></script>
     <script src="sketch.js"></script>
   
