--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script src="langManager.js"></script>
     <script src="TrainShaker.js"></script>
     <script src="TransitionManager.js"></script>
+    <script src="platform.js"></script>
     <script src="DreamManager.js"></script>
     <script src="NPC.js"></script>
     <script src="touchControl.js"></script>
