--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <script src="touchControl.js"></script>
     <script src="background.js"></script>
     <script src="music.js"></script>
-    <script src="dialogue.js"></script>
+    <script src="DialogueManager.js"></script>
     <script src="UI.js"></script>
     <script src="Game.js"></script>
     <script src="sketch.js"></script>
