--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main>
     </main>
     <script src="Cat.js"></script>
-    <script src="langManager.js"></script>
+    <script src="langText.js"></script>
     <script src="TrainShaker.js"></script>
     <script src="TransitionManager.js"></script>
     <script src="platform.js"></script>
@@ -27,6 +27,7 @@
     <script src="background.js"></script>
     <script src="music.js"></script>
     <script src="DialogueManager.js"></script>
+    <script src="InputManager.js"></script>
     <script src="UI.js"></script>
     <script src="Game.js"></script>
     <script src="sketch.js"></script>
