--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script src="DreamManager.js"></script>
     <script src="NPC.js"></script>
     <script src="touchControl.js"></script>
+    <script src="VirtualJoystick.js"></script>
     <script src="background.js"></script>
     <script src="music.js"></script>
     <script src="DialogueManager.js"></script>
