--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <script src="music.js"></script>
     <script src="DialogueManager.js"></script>
     <script src="InputManager.js"></script>
+    <script src="MiniGame.js"></script>
     <script src="UI.js"></script>
     <script src="Game.js"></script>
     <script src="sketch.js"></script>
