--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <script src="langText.js"></script>
     <script src="TrainShaker.js"></script>
     <script src="TransitionManager.js"></script>
+    <script src="Block.js"></script>
+    <script src="Decoration.js"></script>
     <script src="platform.js"></script>
     <script src="DreamManager.js"></script>
     <script src="NPC.js"></script>
