--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <script src="VirtualJoystick.js"></script>
     <script src="background.js"></script>
     <script src="music.js"></script>
+    <script src="item.js"></script>
     <script src="DialogueManager.js"></script>
     <script src="InputManager.js"></script>
     <script src="MiniGame.js"></script>
