--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <script src="touchControl.js"></script>
     <script src="VirtualJoystick.js"></script>
     <script src="background.js"></script>
+    <script src="Flag.js"></script>
     <script src="music.js"></script>
     <script src="item.js"></script>
     <script src="DialogueManager.js"></script>
